--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body {
     overflow: hidden;
   }
 
-  .conteiner {
+  .container {
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
@@ -128,18 +128,8 @@ body {
 
 .hero-images {
     background-color: #2e2f42;
-    background-image: url(шлях до зображення);
-    background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: linear-gradient(
-	to bottom, 
-	rgba(255, 0, 0, 0.3), 
-	rgba(255, 0, 0, 0.3)
-	),
-	url(шлях до зображення);
-    padding: 188px 0;
-
 }  
 
 .title {
@@ -346,4 +336,5 @@ body {
     letter-spacing: 0.02em;
     color: #f4f4fd;
     max-width: 264px;
+    margin: 0;
 }
