add padding in 1 section

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,7 @@ body {
     background-color: #2e2f42;
     background-position: center;
     background-size: cover;
+    padding: 188px 0;
 }  
 
 .title {
